--- a/src/index.html
+++ b/src/index.html
@@ -1,19 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <base href="/">
     <meta charset="utf-8">
-    <title><%= htmlWebpackPlugin.options.title %></title>
+    <title>
+        <%= htmlWebpackPlugin.options.title %>
+    </title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="renderer" content="webkit">
-    <meta name="description" content="This is Jack Hu's blog. use vue and vuex.">
-    <meta name="keyword" content="Jackblog vue vuex vue-router vue-resource vue-strap vue-toastr vue-validator">
-  </head>
-  <body>
+    <meta name="description" content="vue app">
+    <meta name="keyword" content="vue app">
+</head>
+
+<body>
     <!--[if lt IE 9]>
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
-  	<div id="root"></div>
-  </body>
+    <div id="root"></div>
+</body>
+
 </html>
